testsuite/tests/parser/should_fail/OpaqueParseFail3.stderr
OpaqueParseFail3.hs:4:12: error:
    parse error on input ‘CONLIKE’
